smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/doc-comments-dangling.smithy
// Syntax error at line 7, column 1: Expected IDENTIFIER but found EOF
$version: "2.0"

namespace com.foo

/// This is a dangling doc comment, and not allowed.
